# hello-desi

./: .gitignore  Hello-Desi-Final-Project-Plan.html  Mira_Project_Status_v2.docx  Mira_Project_Status_v3.docx  claude.md  context.md  generate_status_doc.js  generate_status_doc_v2.js  hello-desi-data-pipeline.html  implementation_plan.md  pyproject.toml  render.yaml  requirements.txt
app/: __init__.py  main.py
app/api/: deps.py  stripe_webhook.py  tasks.py  webhook.py
app/services/: business_registration.py  business_service.py  claude_service.py  deals_service.py  digest_service.py  intent_router.py  llm_router.py  monetization_service.py  proof_message_service.py  session_store.py  user_state_service.py  whatsapp_service.py
app/utils/: whatsapp_utils.py
config/: settings.py
data/schemas/: 001_create_users.sql  002_create_businesses.sql  003_create_events.sql  004_create_classifieds.sql  005_create_conversations.sql
deploy/: hellodesi.service  nginx-hellodesi.conf  redeploy.sh  setup-hostinger.sh
scripts/: migrate_v2.sql  seed_businesses.py
